--- a/bootstrap-test/layout-test-bootstrap.html
+++ b/bootstrap-test/layout-test-bootstrap.html
@@ -11,21 +11,21 @@
         <h1>Simple 2 Column CSS Layout, final layout</h2>
       </div>
       <div class="options-links bg-danger">
-        <a href="./bootstrap-test.html">Option 1</a>
-        <a href="./bootstrap-test.html">Option 2</a>
-        <a href="./bootstrap-test.html">Option 3</a>
-        <a href="./bootstrap-test.html">Option 4</a>
-        <a href="./bootstrap-test.html">Option 5</a>
+        <a href="./layout-test-bootstrap.html">Option 1</a>
+        <a href="./layout-test-bootstrap.html">Option 2</a>
+        <a href="./layout-test-bootstrap.html">Option 3</a>
+        <a href="./layout-test-bootstrap.html">Option 4</a>
+        <a href="./layout-test-bootstrap.html">Option 5</a>
       </div>
       <div class="row">
         <div class="col-md-8">
           <div class="column-1 bg-info">
             <h2>Column 1</h2>
             <p>
-              <a href="./bootstrap-test.html">456 Berea Street Home</a>
+              <a href="./layout-test-bootstrap.html">456 Berea Street Home</a>
             </p>
             <p>
-              <a href="./bootstrap-test.html">Simple 2 column CSS Layout</a>
+              <a href="./layout-test-bootstrap.html">Simple 2 column CSS Layout</a>
             </p>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -41,49 +41,49 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <ul>
               <li>
-                <a href="./bootstrap-test.html">Link 1</a>
+                <a href="./layout-test-bootstrap.html">Link 1</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 2</a>
+                <a href="./layout-test-bootstrap.html">Link 2</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 3</a>
+                <a href="./layout-test-bootstrap.html">Link 3</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 4</a>
+                <a href="./layout-test-bootstrap.html">Link 4</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 5</a>
+                <a href="./layout-test-bootstrap.html">Link 5</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 6</a>
+                <a href="./layout-test-bootstrap.html">Link 6</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 7</a>
+                <a href="./layout-test-bootstrap.html">Link 7</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 8</a>
+                <a href="./layout-test-bootstrap.html">Link 8</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 9</a>
+                <a href="./layout-test-bootstrap.html">Link 9</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 10</a>
+                <a href="./layout-test-bootstrap.html">Link 10</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 11</a>
+                <a href="./layout-test-bootstrap.html">Link 11</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 12</a>
+                <a href="./layout-test-bootstrap.html">Link 12</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 13</a>
+                <a href="./layout-test-bootstrap.html">Link 13</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 14</a>
+                <a href="./layout-test-bootstrap.html">Link 14</a>
               </li>
               <li>
-                <a href="./bootstrap-test.html">Link 15</a>
+                <a href="./layout-test-bootstrap.html">Link 15</a>
               </li>
             </ul>
           </div>
