--- a/bootstrap-test/layout-test-bootstrap.html
+++ b/bootstrap-test/layout-test-bootstrap.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
     <link href="./CSS/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+    <link href="./CSS/bootstrap-test.css" rel="stylesheet" type="text/css" media="all">
 		<title>Layout Test with Bootstrap</title>
 	</head>
 
@@ -17,9 +18,9 @@
         <a href="./layout-test-bootstrap.html">Option 4</a>
         <a href="./layout-test-bootstrap.html">Option 5</a>
       </div>
-      <div class="row">
-        <div class="col-md-8">
-          <div class="column-1 bg-info">
+      <div class="row no-margin bg-success">
+        <div class="col-sm-8 bg-info">
+          <div class="column-1">
             <h2>Column 1</h2>
             <p>
               <a href="./layout-test-bootstrap.html">456 Berea Street Home</a>
@@ -35,8 +36,8 @@
             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="column-2 bg-success">
+        <div class="col-sm-4 bg-success">
+          <div class="column-2">
             <h2>Column 2</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <ul>
