--- a/ping-pong.html
+++ b/ping-pong.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <link href="./ping-pong-styles.css" rel="stylesheet" type="text/css">
     <script src="./jquery-1.11.3.js"></script>
     <script src="./ping-pong.js"> </script>
   </head>
