--- a/ping-pong.html
+++ b/ping-pong.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="./ping-pong-styles.css" rel="stylesheet" type="text/css">
-    <script src="./jquery-1.11.3.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="./ping-pong.js"> </script>
   </head>
   <body>
