Debug- saves HTML to correct folder

--- a/ping-pong-test/ping-pong.html
+++ b/ping-pong-test/ping-pong.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <script src="./jquery-1.11.3.min.js"></script>
+    <link href="./ping-pong-styles.css" rel="stylesheet" type="text/css">
+    <script src="./jquery-1.11.3.js"></script>
     <script src="./ping-pong.js"> </script>
   </head>
   <body>
@@ -11,7 +12,7 @@
 
     <div class="try-again">
       <h2>That was not a number!</h2>
-      <a href="./pingpong.html">Try Again.</a>
+      <a href="./ping-pong.html">Try Again.</a>
     </div>
 
   </body>
