Edits file names and orders to properly link pages

--- a/layout-test/bootstrap-layout-test/layout-test-bootstrap.html
+++ b/layout-test/bootstrap-layout-test/layout-test-bootstrap.html
@@ -16,7 +16,7 @@
         <a href="./layout-test-bootstrap.html">Option 2</a>
         <a href="./layout-test-bootstrap.html">Option 3</a>
         <a href="./layout-test-bootstrap.html">Option 4</a>
-        <a href="./layout-test-bootstrap.html">Option 5</a>
+        <a href="../index.html">See it with my own CSS!</a>
       </div>
       <div class="row no-margin bg-success">
         <div class="col-sm-8 bg-info">
