--- a/layout-test/index.html
+++ b/layout-test/index.html
@@ -15,7 +15,7 @@
         <a href="./layout-test.html">Option 2</a>
         <a href="./layout-test.html">Option 3</a>
         <a href="./layout-test.html">Option 4</a>
-        <a href="./layout-test.html">Option 5</a>
+        <a href="./bootstrap-layout-test/layout-test-bootstrap.html">See it styled with Bootstrap!</a>
       </div>
       <div class="column-1">
         <div class="container-1">
