--- a/ping-pong-test/index.html
+++ b/ping-pong-test/index.html
@@ -12,7 +12,7 @@
 
     <div class="try-again">
       <h2>That was not a number!</h2>
-      <a href="./ping-pong.html">Try Again.</a>
+      <a href="./index.html">Try Again.</a>
     </div>
 
   </body>
